sharpen the criticism of preregistration

--- a/references.bib
+++ b/references.bib
@@ -157,3 +157,32 @@
   journal = {APS Observer},
   volume = {29}
 }
+
+
+@article{phamPreregistrationNeitherSufficient2021,
+  title = {Preregistration {{Is Neither Sufficient}} nor {{Necessary}} for {{Good Science}}},
+  author = {Pham, Michel Tuan and Oh, Travis Tae},
+  year = {2021},
+  journal = {Journal of Consumer Psychology},
+  volume = {31},
+  number = {1},
+  pages = {163--176},
+  issn = {1532-7663},
+  doi = {10.1002/jcpy.1209}
+}
+
+@article{szollosiPreregistrationWorthwhile2020,
+  title = {Is {{Preregistration Worthwhile}}?},
+  author = {Szollosi, Aba and Kellen, David and Navarro, Danielle J. and Shiffrin, Richard and van Rooij, Iris and Zandt, Trisha Van and Donkin, Chris},
+  year = {2020},
+  month = feb,
+  journal = {Trends in Cognitive Sciences},
+  volume = {24},
+  number = {2},
+  pages = {94--95},
+  publisher = {{Elsevier}},
+  issn = {1364-6613, 1879-307X},
+  doi = {10.1016/j.tics.2019.11.009},
+  langid = {english},
+  pmid = {31892461}
+}
