--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -44,35 +44,30 @@ The scientific community has long pondered the vital distinction between explora
 Many researchers preregister their studies [@nosekPreregistrationRevolution2018] to honour this distinction and produce results that are considered confirmatory.
 Indeed, rigorous application of preregistration prevents researchers from reporting a simple confirmatory story for a set of results produced by an arduous process of trial and error [@wagenmakersAgendaPurelyConfirmatory2012].
 However, while many researchers intuitively recognize this as an advantage of preregistration, some remain unconvinced.
-Those without this intuition ask the fundamental question of why should a study be preregistered at all?
-Nevertheless, even researchers convinced of its advantages have some problems with an intuitive approach.
-Before data collection, they must make difficult decisions about what to include in the preregistration and in how much detail.
-After data collection, they might be uncertain what conditions warrant deviating from the preregistration.
-If the research community remains confused by the purpose of preregistrations, it decreases the efficiency of the scientific endeavour. 
+Skeptics question why a study should be preregistered at all.
+Even researchers convinced of the advantages have some problems when left with nothing more than an intuitive appeal.
+Their intuition must answer difficult questions, such as what to include, in how much detail, in the preregistration, or what conditions warrant deviating from the preregistration.
+If the research community remains confused about the purpose of preregistrations, it is bound to misapply it and hence decrease the efficiency of the scientific endeavour. 
 We propose a principled justification for preregistration with a formal objective against which researcher can evaluate their trade-offs.
 
-Preregistrations trade-off researchers' degrees of freedom (XXX) to obtain more confirmatory results.
-However, balancing this trade-off is difficult.
-Being too restricted by the boundaries set in the preregistration make some researchers hesitant to adopt the practice [@goldin-meadowWhyPreregistrationMakes2016].
-Even researchers who have been persuaded of its advantages sometimes apply strategies to skirt the self-imposed restrictions.
+The scientific community asserts that the objective of preregistration is to distinguish confirmatory from exploratory research [@mellorEasyPreregistrationWill2018, @simmonsPreregistrationWhyHow2021; @bakkerEnsuringQualitySpecificity2020; @nosekPreregistrationRevolution2018; @wagenmakersAgendaPurelyConfirmatory2012].
+Taken at face value, this objective implies that research is confirmatory if, and only if, it is preregistered.
+However, this postulate is indefensible.
+Researchers can conduct confirmatory research without preregisteration.
+Wether they can convince other researchers of the confirmatory nature of their research is a seperate issue.
+Preregistered but not strictly confirmatory studies are also commonplace.
+Researchers may apply two strategies to evade the self-imposed restrictions of preregistrations.
 One strategy is to write a loose preregistration, to begin with; another is to deviate from the preregistration afterwards.
 Both strategies may be used with compelling scientific reasoning or with the self-serving intent of generating desirable results no matter the nature of the phenomenon under study.
-The conundrum is that the current conceptualization of preregistration deems a study "properly" preregistered even if it contains a recipe for p-hacking before data collection but "improper" if the researcher did technically deviate afterwards.
-This, of course, goes against most researchers' intuition about what is considered exploratory and confirmatory.
-We take these issues as signals of a misunderstanding about how preregistration contributes to scientific progress.
-In particular, we want to challenge the common view that preregistration somehow cleanly separates confirmatory from exploratory.
+Insisting on equating preregistration and confirmation has led to criticism that preregistration is actually negative sum, and neither sufficent nor neccesary to establish confirmation [@szollosiPreregistrationWorthwhile2020; @phamPreregistrationNeitherSufficient2021]
 
-Deciding if a study is confirmatory or exploratory is a judgment made by the researcher.
-The issues outlined above arise by delegating this judgment to a simple decision rule.
-That is, if something is preregistered, it is considered confirmatory, and if it is not preregistered, it is considered exploratory.
-This rule of thumb is often applied implicitly.
-Other times it is stated as the explicit goal of preregistration [@mellorEasyPreregistrationWill2018].
-In both cases, it leads to confusion when applied outside specific bounds.
+These issues arise from a fundamental confusion about the objective of preregistration.
+Researchers are bound to be confused when they delegate an important scientific judgment to a simple decision rule, that only takes into account the existence of a preregistration.
 Preregistering an inherently exploratory analysis (like testing dozens of relations) does not make it confirmatory, nor will a carefully conducted confirmatory study become exploratory if the researcher deviates from the preregistration in minor details.
-To uphold the simplicity of the decision rule, it is routinely suggested only to preregister when a study is expected to have a low type I error rate by design and will run/be analyzed without changes no matter what [@simmonsPreregistrationWhyHow2021; @bakkerEnsuringQualitySpecificity2020].
+Equating confirmatory research with preregistered research is only possible for studies that expect low type I error rate and will run/be analyzed without changes no matter what [@simmonsPreregistrationWhyHow2021; @bakkerEnsuringQualitySpecificity2020].
 Under these conditions, the rule holds, but such restricted use makes preregistration a niche solution unable to match the greater problem of replicability in psychology and elsewhere.
 
-We show that this simple decision rule is a special case of a more general conceptualization under Bayesian reasoning.
+We show that the simple decision rule is just a special case of a more general conceptualization under Bayesian reasoning. 
 To that end, we first introduce some tools of Bayesian philosophy of science and map the exploration/confirmation distinction onto a dimensional quantity we call "theoretical risk" [we borrow the term from @meehlTheoreticalRisksTabular1978], which is inversely related to type I error rate.
 We then outline two interpretations of how theoretical risk is impacted by preregistration.
 The first interpretation corresponds to the traditional application of preregistration to research paradigms that focus on confirmation by maximizing the theoretical risk or equivalently by limiting type I error.
@@ -81,13 +76,9 @@ Following this interpretation, the theoretical risk is not necessarily directly 
 
 To arrive at this interpretation, we rely on three arguments.
 The first is that theoretical risk is vital for judging theories.
-This argument comes natural to a (Neo‑)Popperian or falsificationist, but  is not self-evident for a conformationist.
 The second argument is that the theoretical risk for a given study is generally uncertain.
 The third and last assumption is that this uncertainty is reduced by applying preregistration.
-
-When we put these arguments into the Bayes' formula, we conclude that because preregistration decreases uncertainty about the theoretical risk, which in turn increases our expectation to gain evidence for or against a theory, preregistration is warranted for any study.
-We will later discuss how our argument relates to a (Neo‑)Popperian philosophy of science.
-For now, we stick to a Bayesian rationale since quantifying uncertainty is crucial for our argument, which would require considerable thought in a falsificationist framework.
+We conclude that because preregistration decreases uncertainty about the theoretical risk, which in turn increases our expectation to gain evidence for or against a theory, preregistration is warranted for any study.
 
 # Epistemic value and the Bayesian rationale
 
