add missing references

--- a/references.bib
+++ b/references.bib
@@ -186,3 +186,30 @@
   langid = {english},
   pmid = {31892461}
 }
+
+@article{ioannidisWhyMostPublished2005,
+  title = {Why {{Most Published Research Findings Are False}}},
+  author = {Ioannidis, John P. A.},
+  year = {2005},
+  month = aug,
+  journal = {PLOS Medicine},
+  volume = {2},
+  number = {8},
+  pages = {e124},
+  publisher = {{Public Library of Science}},
+  issn = {1549-1676},
+  doi = {10.1371/journal.pmed.0020124}
+}
+
+@article{opensciencecollaborationEstimatingReproducibilityPsychological2015,
+  title = {Estimating the Reproducibility of Psychological Science},
+  author = {{OPEN SCIENCE COLLABORATION}},
+  year = {2015},
+  month = aug,
+  journal = {Science},
+  volume = {349},
+  number = {6251},
+  pages = {aac4716},
+  publisher = {{American Association for the Advancement of Science}},
+  doi = {10.1126/science.aac4716}
+}
