remove all caps

--- a/references.bib
+++ b/references.bib
@@ -203,7 +203,7 @@
 
 @article{opensciencecollaborationEstimatingReproducibilityPsychological2015,
   title = {Estimating the Reproducibility of Psychological Science},
-  author = {{OPEN SCIENCE COLLABORATION}},
+  author = {{Open Science Collaboration}},
   year = {2015},
   month = aug,
   journal = {Science},
