--- a/references.bib
+++ b/references.bib
@@ -213,3 +213,55 @@
   publisher = {{American Association for the Advancement of Science}},
   doi = {10.1126/science.aac4716}
 }
+
+
+@article{chanEmpiricalEvidenceSelective2004,
+  title = {Empirical {{Evidence}} for {{Selective Reporting}} of {{Outcomes}} in {{Randomized TrialsComparison}} of {{Protocols}} to {{Published Articles}}},
+  author = {Chan, An-Wen and Hr{\'o}bjartsson, Asbj{\o}rn and Haahr, Mette T. and G{\o}tzsche, Peter C. and Altman, Douglas G.},
+  year = {2004},
+  month = may,
+  journal = {JAMA},
+  volume = {291},
+  number = {20},
+  pages = {2457--2465},
+  issn = {0098-7484},
+  doi = {10.1001/jama.291.20.2457}
+}
+
+@article{dwanSystematicReviewEmpirical2008,
+  title = {Systematic {{Review}} of the {{Empirical Evidence}} of {{Study Publication Bias}} and {{Outcome Reporting Bias}}},
+  author = {Dwan, Kerry and Altman, Douglas G. and Arnaiz, Juan A. and Bloom, Jill and Chan, An-Wen and Cronin, Eugenia and Decullier, Evelyne and Easterbrook, Philippa J. and Elm, Erik Von and Gamble, Carrol and Ghersi, Davina and Ioannidis, John P. A. and Simes, John and Williamson, Paula R.},
+  year = {2008},
+  month = aug,
+  journal = {PLOS ONE},
+  volume = {3},
+  number = {8},
+  pages = {e3081},
+  publisher = {{Public Library of Science}},
+  issn = {1932-6203},
+  doi = {10.1371/journal.pone.0003081}
+}
+
+@article{silagyPublishingProtocolsSystematic2002,
+  title = {Publishing {{Protocols}} of {{Systematic ReviewsComparing What Was Done}} to {{What Was Planned}}},
+  author = {Silagy, Chris A. and Middleton, Philippa and Hopewell, Sally},
+  year = {2002},
+  month = jun,
+  journal = {JAMA},
+  volume = {287},
+  number = {21},
+  pages = {2831--2834},
+  issn = {0098-7484},
+  doi = {10.1001/jama.287.21.2831}
+}
+
+@misc{stefanBigLittleLies2022,
+  title = {Big {{Little Lies}}: {{A Compendium}} and {{Simulation}} of p-{{Hacking Strategies}}},
+  shorttitle = {Big {{Little Lies}}},
+  author = {Stefan, Angelika and Sch{\"o}nbrodt, Felix},
+  year = {2022},
+  month = mar,
+  institution = {{PsyArXiv}},
+  doi = {10.31234/osf.io/xy2dk}
+}
+
